fix to vertically align modals

--- a/css/layout.css
+++ b/css/layout.css
@@ -358,6 +358,9 @@
 
 .app-modal{
 	position:absolute;
+	display:-webkit-box;
+	-webkit-box-pack:center;
+	-webkit-box-align:center;	
 	width:100%;
 	height:100%;
 	z-index:100;
@@ -367,9 +370,6 @@
 
 .app-modal .modal-container{
 	width:90%;
-	position:absolute;
-	top:30%;
-	left:5%;
 }
 
 .modal-container .modal-header{
