--- a/css/states.css
+++ b/css/states.css
@@ -88,5 +88,5 @@
 }
 
 .modal .app-modal{
-	display:block;
+	display:-webkit-box;
 }
